--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-toastify": "^9.1.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
